--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+html {
+    scroll-behavior: smooth;
+}
+:root {
+    --dark-color: #16182c;
+    --light-color: #ececec;
+    --main-color: #19a7ce;
+    --second-color: #1b1c3c;
+    --black-color: #000;
+    --white-color: #fff;
+    --gray-color: #9ea1a7;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: 'Tajawal', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+    width: 1170px;
+    padding: 10px;
+    margin: 0 auto;
+}
+@media (max-width: 1170px) {
+    .container {
+        width: 100%;
+    }
 }
