--- a/src/components/MainButton/MainButton.module.css
+++ b/src/components/MainButton/MainButton.module.css
@@ -70,3 +70,19 @@
         font-size: 1.7rem;
     }
 }
+
+
+.portfolio-button {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+.portfolio-button:hover img {
+    transform: scale(1.05);
+}
+
+.portfolio-button:hover p {
+    transform: translateY(0px);
+}
