--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -1,4 +1,4 @@
-.mainStyle, .secondStyle {
+.mainStyle, .secondStyle, .portfolio-text {
     font-size: 1rem;
     font-weight: 500;
     text-transform: capitalize;
@@ -6,4 +6,19 @@
 }
 .secondStyle {
     color: var(--gray-color);
+}
+
+.portfolio-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    padding: 15px;
+    background: rgb(22,24,44);
+    background: linear-gradient(0deg, rgba(22,24,44,1) 0%, rgba(29,31,50,1) 15%, rgba(46,47,65,1) 25%, rgba(255,255,255,0) 100%);
+    transform: translateY(140px);
+    transition-duration: 0.2s;
 }
