--- a/src/sections/Portfolio/Portfolio.module.css
+++ b/src/sections/Portfolio/Portfolio.module.css
@@ -7,5 +7,8 @@
 .image {
     width: 100%;
     height: 100%;
+    min-height: 240px;
+    max-height: 255px;
+    object-fit: cover;
     transition: 0.2s;
 }
